sesli ikaz eklendi.arama ekranındaki hatalar giderildi.sistem iyileştirildi hatalar giderildi.lokasyon kontrolü eklendi.

--- a/route_app/lib/l10n/intl_en.arb
+++ b/route_app/lib/l10n/intl_en.arb
@@ -27,7 +27,8 @@
 
   "app_yes": "Yes",
   "app_no": "No",
-
+  "maps_screen_open_volume": "Turn On Sound",
+  "maps_screen_closed_volume": "Turn Off Sound",
   "intro_screen_next_button": "Next",
   "intro_screen_submit_button": "Allow Location",
   "location_screen_title": "Selection Screen",
@@ -115,7 +116,12 @@
   "user_profile_logout_title": "Log Out",
   "user_profile_logout_show_title": "Do you want to log out?",
   "user_profile_logout_show_title_content": "If you log out, all your progress will be lost. Do you want to continue?",
-
+  "location_permission_denied": "Location Permission Denied",
+  "please_allow_permission_in_settings": "Please allow location permission in the settings.",
+  "open_settings": "Open Settings",
+  "search_hint": "Search...",
+  "no_results_found": "No results found. Please check your search terms.",
+  "no_place_to_search": "Don’t have a place to search? Let’s get started!",
   "user_place_screen_title": "Place Details",
   "user_place_screen_route_start_button": "Start Route",
 
@@ -140,12 +146,26 @@
   "frozenscreen_frozen_title_content": "Your account has been frozen. You can send feedback for more information.",
   "frozenscreen_frozen_title": "Your Account is Frozen",
 
+  "faq_question_1": "How can I use the route app?",
+  "faq_answer_1": "The Route app is designed to make it easier for disabled individuals to access certain points. You can select a location from your main screen and receive recommendations like restrooms and markets along the way.",
+  "faq_question_2": "Which places are available in the app?",
+  "faq_answer_2": "The app offers various places including mosques, museums, and cultural sites.",
+  "faq_question_3": "I forgot my password, what should I do?",
+  "faq_answer_3": "You can click on the 'Forgot my password' option on the login screen, enter your email, and receive a password reset link. Please check your spam folder if you don't see the email.",
+  "faq_question_4": "Is the app free?",
+  "faq_answer_4": "Yes, the app is completely free. However, there are optional in-app purchases for extra features.",
+  "faq_question_5": "What should I do if I experience a problem?",
+  "faq_answer_5": "If you experience any problems, you can send feedback directly through the app without needing to fill out a form.",
+  "faq_question_6": "What languages does the app support?",
+  "faq_answer_6": "The app supports both English and Turkish.",
+
   "maps_screen_end_route_button_submit": "Do you want to end the route?",
   "maps_screen_end_route_button_submit2": "End Route",
   "maps_screen_follow_route": "Please follow this order:",
   "route_complete_submit_button": "Return to Home",
   "route_complete_tebrik": "Congratulations!",
   "route_complete_content": "You have successfully completed the route.",
+  "route_complete_locations": "You are here",
   "route_complete_title": "Route Completed",
   "color_red": "Red",
   "color_blue": "Blue",
