Yer ekranındaki tekrar tekrar puan verme hatası giderildi.Yorum yapma özelliği eklendi.Genel hatalar giderildi ve performans iyileştirildi.

--- a/route_app/lib/l10n/intl_en.arb
+++ b/route_app/lib/l10n/intl_en.arb
@@ -159,6 +159,22 @@
   "faq_question_6": "What languages does the app support?",
   "faq_answer_6": "The app supports both English and Turkish.",
 
+  "write_comment": "Write a Comment",
+  "write_your_comment_here": "Write your comment here...",
+  "comment_added_successfully": "Comment added successfully",
+  "error_adding_comment": "Error adding comment: ",
+  "send": "Send",
+  "user_info_not_loaded": "User information not loaded",
+  "comments": "Comments",
+  "no_comments": "No comments",
+  "user": "User",
+  "email_not_found": "Email not found",
+  "date_not_found": "Date not found",
+  "just_now": "Just now",
+  "minutes_ago": "minutes ago",
+  "hours_ago": "hours ago",
+  "days_ago": "days ago",
+
   "maps_screen_end_route_button_submit": "Do you want to end the route?",
   "maps_screen_end_route_button_submit2": "End Route",
   "maps_screen_follow_route": "Please follow this order:",
