--- a/route_app/lib/l10n/intl_tr.arb
+++ b/route_app/lib/l10n/intl_tr.arb
@@ -160,6 +160,21 @@
   "faq_question_6": "Uygulama hangi dilleri destekliyor?",
   "faq_answer_6": "Uygulama İngilizce ve Türkçe dillerini desteklemektedir.",
 
+  "comments": "Yorumlar",
+  "no_comments": "Yorumlar yok",
+  "user": "Kullanıcı",
+  "email_not_found": "Email bulunamadı",
+  "date_not_found": "Tarih bilinmiyor",
+  "write_comment": "Yorum Yaz",
+  "write_your_comment_here": "Yorumunuzu buraya yazın...",
+  "comment_added_successfully": "Yorum başarıyla eklendi",
+  "error_adding_comment": "Yorum eklenirken hata oluştu: ",
+  "send": "Gönder",
+  "user_info_not_loaded": "Kullanıcı bilgisi yüklenemedi",
+  "just_now": "Şimdi",
+  "minutes_ago": "dakika önce",
+  "hours_ago": "saat önce",
+  "days_ago": "gün önce",
 
   "maps_screen_end_route_button_submit":"Rotayı bitirmek istiyor musunuz?",
   "maps_screen_end_route_button_submit2":"Rotayı bitir",
